--- a/runtime/pangolin-parachain/Cargo.toml
+++ b/runtime/pangolin-parachain/Cargo.toml
@@ -180,4 +180,5 @@ runtime-benchmarks = [
 	"pallet-proxy/runtime-benchmarks",
 	"pallet-session-benchmarking",
 	"sp-runtime/runtime-benchmarks",
+	"dp-common-runtime/runtime-benchmarks",
 ]
