from smart chain issuing pallet (#153)

--- a/runtime/pangolin-parachain/Cargo.toml
+++ b/runtime/pangolin-parachain/Cargo.toml
@@ -181,4 +181,5 @@ runtime-benchmarks = [
 	"pallet-proxy/runtime-benchmarks",
 	"pallet-session-benchmarking",
 	"sp-runtime/runtime-benchmarks",
+	"dp-common-runtime/runtime-benchmarks",
 ]
